--- a/index.html
+++ b/index.html
@@ -15,6 +15,41 @@
 </head>
 <body>
     <!-- !HEADER -->
+
+    <header class="header" id="home">
+        <nav class="navbar container">
+            <a href="./index.html" class="logo">Krista-Mari.</a>
+            <div class="navbar-buttons">
+                <button type="button" class="button icon-button menu-toggle-button">
+                    <i class="bx bx-menu open-icon"></i>
+                    <i class="bx bx-menu close-icon"></i>
+                </button>
+                <button type="button" class="button icon-button theme-toggle-button">
+                    <i class="bx bx-toggle-left theme-off"></i>
+                    <i class="bx bx-toggle-right theme-on"></i>
+                </button>
+            </div>
+            <div class="menu">
+                <ul class="list">
+                    <li class="list-item">
+                        <a href="#" class="list-link">
+                            <span>01</span>About me
+                        </a>
+                    </li>
+                    <li class="list-item">
+                        <a href="#" class="list-link">
+                            <span>02</span> Portfolio
+                        </a>
+                    </li>
+                    <li class="list-item">
+                        <a href="#" class="list-link">
+                            <span>03</span> Contact
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     
     <!-- !HERO SECTION -->
 
