--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </p>
                 </div>
                 <div class="scroll-reveal-right">
-                    <div class="description-image has-sparkles">
+                    <div class="description-image has-sparkles-alt">
                         <img src="./assets/images/Avatar.png" alt="">
                     </div>
                 </div>
@@ -112,7 +112,7 @@
             <div class="portfolio-cards d-grid">
                 <a href="#" class="portfolio-card portfolio-card-1">
                     <div class="card-image">
-                        <img src="./assets/images/mntn.png" alt="">
+                        <img src="./assets/images/lintu.JPG" alt="">
                     </div>
                     <div class="card-heading">
                         <h5 class="card-title">MNTN</h5>
@@ -122,7 +122,7 @@
 
                 <a href="#" class="portfolio-card portfolio-card-2">
                     <div class="card-image">
-                        <img src="./assets/images/blockchained.png" alt="">
+                        <img src="./assets/images/boat.JPG" alt="">
                     </div>
                     <div class="card-heading">
                         <h5 class="card-title">Blockchained</h5>
@@ -130,22 +130,22 @@
                     </div>
                 </a>
 
-                <a href="#" class="portfolio-card portfolio-card-3">
+                <a href="https://github.com/kkrista/react-dictionary-project" class="portfolio-card portfolio-card-3">
                     <div class="card-image">
-                        <img src="./assets/images/recehtok.png" alt="">
+                        <img src="./assets/images/dictionaryapp.JPG" alt="">
                     </div>
                     <div class="card-heading">
-                        <h5 class="card-title">Recetok</h5>
+                        <h5 class="card-title">Dictionary App</h5>
                         <span class="card-subtitle">Dashboard design</span>
                     </div>
                 </a>
 
-                <a href="#" class="portfolio-card portfolio-card-4">
+                <a href="https://github.com/kkrista/WeatherApp" class="portfolio-card portfolio-card-4">
                     <div class="card-image">
-                        <img src="./assets/images/rsound.png" alt="">
+                        <img src="./assets/images/weatherapp.JPG" alt="">
                     </div>
                     <div class="card-heading">
-                        <h5 class="card-title">Rsound</h5>
+                        <h5 class="card-title">Weather App</h5>
                         <span class="card-subtitle">Web Design</span>
                     </div>
                 </a>
@@ -160,12 +160,12 @@
                     </div>
                 </a>
 
-                <a class="portfolio-card portfolio-card-6 large-button-container">
-                    <a href="#" class="large-button button-fill">
+                <div class="portfolio-card portfolio-card-6 large-button-container">
+                    <a href="https://github.com/kkrista?tab=repositories" class="large-button button-fill">
                         View 
                         <br> All
                     </a>
-                </a>
+                </div>
 
             </div>
         </div>
@@ -189,8 +189,8 @@
                     </p>
                 </div>
                 <div class="scroll-reveal-right">
-                    <div class="description-image">
-                        <img src="./assets/images/flower.png" alt="">
+                    <div class="description-image has-sparkles-alt">
+                        <img src="./assets/images/laptopcontact.png" alt="">
                     </div>
                 </div>
             </div>
@@ -228,30 +228,25 @@
 
             <div class="social-media">
                 <ul class="list">
-                    <!-- <li class="list-item">
-                        <a href="#" class="list-link">
-                            <i class="bx bxl-twitter"></i>
-                        </a>
-                    </li> -->
                     <li class="list-item">
-                        <a href="#" class="list-link">
+                        <a href="https://www.instagram.com/katajistokrista/" class="list-link">
                             <i class="bx bxl-instagram"></i>
                         </a>
                     </li>
                     <li class="list-item">
-                        <a href="#" class="list-link">
+                        <a href="https://github.com/kkrista" class="list-link">
                             <i class="bx bxl-github"></i>
                         </a>
                     </li>
                     <li class="list-item">
-                        <a href="#" class="list-link">
+                        <a href="https://www.linkedin.com/in/kristamarikatajisto/" class="list-link">
                             <i class="bx bxl-linkedin"></i>
                         </a>
                     </li>
                 </ul>
             </div>
 
-            <span>&copy; 2022 Krista-Mari. All rights reserved.</span>
+            <span>&copy; 2022 Krista-Mari Katajisto. All rights reserved.</span>
 
             <a href="#home" class="scroll-top">
                 <i class="bx bx-chevron-up"></i> Back to top
