--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="section-description d-grid">
                 <div class="scroll-reveal-left">
                     <p class="description">
-                        Hi, I'm <span class="text-bold">Krista-Mari</span>, and at the beginning of my <span class="text-bold">career</span> as a <span class="text-bold">designer and developer</span>, I work and study hard to implement for my client's <span class="text-bold">ideas into reality</span>. Developing and creating beautiful interactive user interfaces is my <span class="text-bold">passion</span>.
+                        Hi, I'm <span class="text-bold">Krista-Mari</span>, and I am on my way to being <span class="text-bold">a professional</span> future <span class="text-bold">designer and developer</span>, I turn my client's <span class="text-bold">ideas into reality</span>. Developing and creating beautiful interactive user interfaces is my <span class="text-bold">passion</span>.
                     </p>
                 </div>
                 <div class="scroll-reveal-right">
@@ -150,13 +150,13 @@
                     </div>
                 </a>
 
-                <a href="#" class="portfolio-card portfolio-card-5">
+                <a href="https://github.com/kkrista/coffeeshop" class="portfolio-card portfolio-card-5">
                     <div class="card-image">
-                        <img src="./assets/images/landie.png" alt="">
+                        <img src="./assets/images/norascoffeeshop1.png" alt="">
                     </div>
                     <div class="card-heading">
-                        <h5 class="card-title">Landie</h5>
-                        <span class="card-subtitle">Web Design</span>
+                        <h5 class="card-title">Nora's Coffee Shop</h5>
+                        <span class="card-subtitle">Web Design & Development</span>
                     </div>
                 </a>
 
