Project section edited/projects added

--- a/index.html
+++ b/index.html
@@ -112,20 +112,20 @@
             <div class="portfolio-cards d-grid">
                 <a href="#" class="portfolio-card portfolio-card-1">
                     <div class="card-image">
-                        <img src="./assets/images/lintu.JPG" alt="">
+                        <img src="./assets/images/space1.png" alt="">
                     </div>
                     <div class="card-heading">
-                        <h5 class="card-title">MNTN</h5>
+                        <h5 class="card-title">Image Gallery</h5>
                         <span class="card-subtitle">Web Design & Development</span>
                     </div>
                 </a>
 
-                <a href="#" class="portfolio-card portfolio-card-2">
+                <a href="https://github.com/kkrista/calculator" class="portfolio-card portfolio-card-2">
                     <div class="card-image">
-                        <img src="./assets/images/boat.JPG" alt="">
+                        <img src="./assets/images/calculatorr.png" alt="">
                     </div>
                     <div class="card-heading">
-                        <h5 class="card-title">Blockchained</h5>
+                        <h5 class="card-title">Calculator</h5>
                         <span class="card-subtitle">App design</span>
                     </div>
                 </a>
@@ -140,12 +140,12 @@
                     </div>
                 </a>
 
-                <a href="https://github.com/kkrista/WeatherApp" class="portfolio-card portfolio-card-4">
+                <a href="https://github.com/kkrista/hotel-booking" class="portfolio-card portfolio-card-4">
                     <div class="card-image">
-                        <img src="./assets/images/weatherapp.JPG" alt="">
+                        <img src="./assets/images/hotelsweb.png" alt="">
                     </div>
                     <div class="card-heading">
-                        <h5 class="card-title">Weather App</h5>
+                        <h5 class="card-title">Hotel Booking Website</h5>
                         <span class="card-subtitle">Web Design</span>
                     </div>
                 </a>
